--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8080
 
 
+###               ###
+### JSON Settings ###
+###               ###
+
+spring.jackson.serialization.write_dates_as_timestamps=false
+
 
 ###             ###
 ### DataSources ###
