--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,18 @@
 			<artifactId>modelmapper</artifactId>
 			<version>0.7.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>2.0.0-beta2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.retrofit</groupId>
+			<artifactId>converter-gson</artifactId>
+			<version>2.0.0-beta2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
