--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.projectKey=lijstr:backend
 # this is the name displayed in the SonarQube UI
 sonar.projectName=LijstrBackend
 sonar.projectVersion=1.0
+sonar.java.source=8
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
@@ -13,3 +14,8 @@ sonar.binaries=target/classes
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Ignore Package Cycle in Domain
+sonar.issue.ignore.multicriteria=packageCycle
+sonar.issue.ignore.multicriteria.packageCycle.ruleKey=squid:CycleBetweenPackages
+sonar.issue.ignore.multicriteria.packageCycle.resourceKey=**/domain/**
