Suppress some unread/unwritten warnings in the models section

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,17 @@ sonar.binaries=target/classes
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
+### Ignores
+sonar.issue.ignore.multicriteria=packageCycle,uf1,uf2,uf3
+
 # Ignore Package Cycle in Domain
-sonar.issue.ignore.multicriteria=packageCycle
 sonar.issue.ignore.multicriteria.packageCycle.ruleKey=squid:CycleBetweenPackages
 sonar.issue.ignore.multicriteria.packageCycle.resourceKey=**/domain/**
+
+# Unwritten/Unread fields
+sonar.issue.ignore.multicriteria.uf1.ruleKey=findbugs:URF_UNREAD_FIELD
+sonar.issue.ignore.multicriteria.uf1.resourceKey=**/models/**
+sonar.issue.ignore.multicriteria.uf2.ruleKey=findbugs:UWF_UNWRITTEN_FIELD
+sonar.issue.ignore.multicriteria.uf2.resourceKey=**/models/**
+sonar.issue.ignore.multicriteria.uf3.ruleKey=findbugs:UWF_UNWRITTEN_PUBLIC_OR_PROTECTED_FIELD
+sonar.issue.ignore.multicriteria.uf3.resourceKey=**/models/**
