Move to default settings

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -1,10 +1,19 @@
+###                  ###
+### General settings ###
+###                  ###
 server.port=8080
+
+# The JSON Web Tokens secret
+jwt.secret=""
+
+# MyApiFilms Token
+maf.token=""
+
 
 
 ###               ###
 ### JSON Settings ###
 ###               ###
-
 spring.jackson.serialization.write_dates_as_timestamps=false
 
 
