More endpoints, JPA fixes & more

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -31,3 +31,5 @@ spring.datasource.username=lijstr
 spring.datasource.password=lijstr
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
