Create Admin on startup

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -3,11 +3,15 @@
 ###                  ###
 server.port=8080
 
+# Admin user
+admin.email=
+admin.password=
+
 # The JSON Web Tokens secret
-jwt.secret=""
+jwt.secret=
 
 # MyApiFilms Token
-maf.token=""
+maf.token=
 
 
 
