--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -3,6 +3,11 @@
 ###                  ###
 server.port=8080
 
+# Host URLs without /
+# eg. https://api.lijstr.nl
+host.api=
+host.app=
+
 # Admin user
 admin.email=
 admin.password=
@@ -13,7 +18,10 @@ jwt.secret=
 # MyApiFilms Token
 maf.token=
 
-
+# MailGun API
+mailgun.domain=
+mailgun.api-key=
+mailgun.from=
 
 ###               ###
 ### JSON Settings ###
