--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
 			<artifactId>logging-interceptor</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>mockwebserver</artifactId>
+			<version>3.2.0</version>
+			<scope>test</scope>
+		</dependency>
 
 
 		<!-- JSON Web Tokens Security -->
