--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -2,6 +2,7 @@
 ### General settings ###
 ###                  ###
 server.port=8080
+server.display-name=
 
 # Host URLs without /
 # eg. https://api.lijstr.nl
