--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -3,6 +3,7 @@
 ###                  ###
 server.port=8080
 server.display-name=
+server.application.version=@project.version@
 
 # Host URLs without /
 # eg. https://api.lijstr.nl
