Added movie poster support

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -4,6 +4,7 @@
 server.port=8080
 server.display-name=
 server.application.version=@project.version@
+server.image-location=folder/
 
 # Host URLs without /
 # eg. https://api.lijstr.nl
