--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -26,6 +26,9 @@ mailgun.domain=
 mailgun.api-key=
 mailgun.from=
 
+#OMDB API
+omdb.api-key=
+
 ###               ###
 ### JSON Settings ###
 ###               ###
