--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>nl.lijstr</groupId>
 	<artifactId>backend</artifactId>
-	<version>1.3.13</version>
+	<version>1.3.14</version>
 	<packaging>war</packaging>
 
 	<name>LijstrBackend</name>
@@ -152,8 +152,14 @@
 			<version>0.7.0</version>
 		</dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.sentry/sentry-spring -->
+        <dependency>
+            <groupId>io.sentry</groupId>
+            <artifactId>sentry-spring</artifactId>
+            <version>1.7.30</version>
+        </dependency>
 
-		<dependency>
+        <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
