Add additional Sentry configuration when running in a Tomcat container
Env files are set through the context of Tomcat, which requires us to move that data to the System env properties.

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -51,3 +51,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.test-on-borrow=true
 spring.datasource.validation-query=SELECT 1
+
+### Sentry ###
+# Special configuration is needed if the application is running in a tomcat container
+# Make sure there is a context.xml with the value sentry.properties.file set to the sentry.properties file
+sentry.tomcat=false
