Add digest emails + settings

--- a/src/main/resources/application.default.properties
+++ b/src/main/resources/application.default.properties
@@ -29,6 +29,9 @@ mailgun.from=
 # OMDB API
 omdb.api-key=
 
+# Emails
+emails.movies.digest=false
+
 ###               ###
 ### JSON Settings ###
 ###               ###
