--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>nl.lijstr</groupId>
 	<artifactId>backend</artifactId>
-	<version>1.5.1</version>
+	<version>1.6.0</version>
 	<packaging>war</packaging>
 
 	<name>LijstrBackend</name>
@@ -51,6 +51,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -116,7 +120,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- JSON -->
+		<!-- Retrofit -->
 		<dependency>
 			<groupId>com.squareup.retrofit2</groupId>
 			<artifactId>retrofit</artifactId>
