--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,11 @@
 			<version>3.14.7</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.uwetrottmann.tmdb2</groupId>
+            <artifactId>tmdb-java</artifactId>
+            <version>2.2.0</version>
+        </dependency>
 
 
 		<!-- JSON Web Tokens Security -->
