--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>nl.lijstr</groupId>
 	<artifactId>backend</artifactId>
 	<version>1.6.1</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>LijstrBackend</name>
 	<description>Lijstr Application</description>
