--- a/pom.xml
+++ b/pom.xml
@@ -171,6 +171,7 @@
 	</dependencies>
 
 	<build>
+        <finalName>LijstrBackend</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
