Update almost all Tests to JUnit 5 (except ModelModifyServiceConstructTest)
ModelModifyServiceConstructTest is currently disabled & not working yet. Seems like we need to fallback to JUnit 4 /w PowerMockito.

--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,13 @@ dependencies {
 
 
     compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 }
